# MyServerFramework

./: .gitignore  README.md
MyServerFramework/: CMakeLists.txt  MyServerFramework.vcxproj  MyServerFramework.vcxproj.filters  main.cpp
MyServerFramework/Game/: UnityBuildGame.cpp
MyServerFramework/Game/Common/: GameBase.cpp  GameBase.h  GameClassDeclare.h  GameHeader.h
MyServerFramework/Game/Config/: GameConfigSystem.h
MyServerFramework/Game/DataBase/SQLite/: SQLiteRegister.cpp
MyServerFramework/Game/Game/: Game.cpp
MyServerFramework/Game/Socket/ServerClient/: SCAttack.cpp  SCGetItemTip.cpp
MyServerFramework_Frame/: CMakeLists.txt  MyServerFramework_Frame.vcxproj  MyServerFramework_Frame.vcxproj.filters
MyServerFramework_Frame/Frame/: UnityBuildFrame.cpp
MyServerFramework_Frame/Frame/Character/: CharacterManager.cpp  CharacterManager.h  MovableObject.cpp  MovableObject.h
MyServerFramework_Frame/Frame/Character/Component/: COMCharacterStateMachine.cpp  COMCharacterStateMachine.h  COMMonsterDecisionTree.cpp  COMMonsterDecisionTree.h
MyServerFramework_Frame/Frame/ClassPool/: ClassBaseTypePool.h  ClassBaseTypePoolThread.h  ClassKeyPool.h  ClassKeyPoolThread.h  ClassObject.h  ClassPool.h  ClassPoolBase.h  ClassPoolThread.h  ClassTypePool.h  ClassTypePoolThread.h  PodPoolThread.h
MyServerFramework_Frame/Frame/ClassPool/ArrayPool/: ArrayPool.cpp  ArrayPoolSingle.cpp  ArrayPoolSingleChar.cpp  ArrayPoolThread.cpp
MyServerFramework_Frame/Frame/ClassPool/Pool/: CharacterPool.h  CommandPool.h  CommandThreadPool.h  CounterThreadPool.h  DTNodePool.h  DelayCommandPool.h  EventInfoPool.h  GameComponentPool.h  LogInfoPool.h  MySQLCacheDataPool.h  MySQLDataPool.h  PacketTCPPool.h  PacketTCPThreadPool.h  PacketWebSocketPool.h  PacketWebSocketThreadPool.h  StateParamPool.h  StatePool.h  TickerPool.h  TimePointPool.h
MyServerFramework_Frame/Frame/ClassPool/VectorPool/: VectorPool.h  VectorPoolManager.cpp  VectorPoolManager.h  VectorPoolThread.h
MyServerFramework_Frame/Frame/CommandSystem/: CommandReceiver.h  CommandSystem.cpp  DelayCommand.h  GameCommand.cpp  GameCommand.h
MyServerFramework_Frame/Frame/CommandSystem/CmdHttp/: CmdHttpGet.cpp  CmdHttpGet.h  CmdHttpPost.cpp  CmdHttpPost.h
MyServerFramework_Frame/Frame/CommandSystem/CmdMySQLManager/: CmdMySQLDeleteAll.cpp  CmdMySQLDeleteAll.h  CmdMySQLDeleteByID.cpp  CmdMySQLDeleteByID.h  CmdMySQLDeleteByLLong2AndT.h  CmdMySQLDeleteByLLongIntAndT.h  CmdMySQLDeleteByLLongT.h  CmdMySQLDeleteByStringT.h  CmdMySQLInsertDataT.h  CmdMySQLInsertOrUpdateDataT.h  CmdMySQLQueryAllT.h  CmdMySQLQueryByIDT.h  CmdMySQLQueryByIntT.h  CmdMySQLQueryByLLongT.h  CmdMySQLQueryByStringT.h  CmdMySQLQueryCountByIntT.h  CmdMySQLQueryCountByLLong2OrT.h  CmdMySQLQueryCountByLLongT.h  CmdMySQLQueryExistByStringT.h  CmdMySQLQueryListByIDT.h  CmdMySQLQueryListByIntT.h  CmdMySQLQueryListByLLongListT.h  CmdMySQLQueryListByLLongT.h  CmdMySQLQueryListByStringListT.h  CmdMySQLQueryListByStringT.h  CmdMySQLUpdateAllIntT.h  CmdMySQLUpdateBoolT.h  CmdMySQLUpdateDataT.h  CmdMySQLUpdateFloat2T.h  CmdMySQLUpdateFloatT.h  CmdMySQLUpdateInt2T.h  CmdMySQLUpdateIntFloatT.h  CmdMySQLUpdateIntT.h  CmdMySQLUpdateLLongIntT.h  CmdMySQLUpdateLLongListT.h  CmdMySQLUpdateLLongT.h  CmdMySQLUpdateString2T.h  CmdMySQLUpdateStringT.h
MyServerFramework_Frame/Frame/CommandSystem/CmdNetServer/: CmdNetServerLogoutAccount.cpp  CmdNetServerLogoutAccount.h  CmdNetServerReceiveUDPPacket.h
MyServerFramework_Frame/Frame/Common/: DoubleBuffer.h  DoubleBufferReadScope.h  Dump.h  ErrorProfile.cpp  ErrorProfile.h  FrameBase.cpp  FrameBase.h  FrameCallback.h  FrameClassDeclare.h  FrameDefine.cpp  FrameDefine.h  FrameEnum.h  FrameEnumCheck.h  FrameHeader.h  FrameMacro.h  FrameStringDefine.h  Keyframe.h  ObjectTool.cpp  Profiler.cpp  Profiler.h  ProfilerData.h  ProfilerScope.h  RandomSystem.cpp  Singleton.h  UsingSTD.h
MyServerFramework_Frame/Frame/Component/: ComponentOwner.cpp  ComponentOwner.h  IComponentInterface.h
MyServerFramework_Frame/Frame/Component/BaseComponent/: GameComponent.h
MyServerFramework_Frame/Frame/Config/: FrameConfigSystem.cpp  FrameConfigSystem.h
MyServerFramework_Frame/Frame/DataBase/Excel/: ExcelData.cpp  (+5 more)
MyServerFramework_Frame/Frame/EventSystem/: EventInfo.h  EventProcess.h  EventSystem.cpp  EventSystem.h
MyServerFramework_Frame/Frame/Factory/: FactoryManager.h
MyServerFramework_Frame/Frame/InputSystem/: InputSystem.cpp  InputSystem.h
MyServerFramework_Frame/Frame/KeyframeManager/: KeyframeManager.cpp
MyServerFramework_Frame/Frame/Log/: GameLogWrap.cpp  GameLogWrap.h  LogInfo.h  LogSystem.cpp
MyServerFramework_Frame/Frame/Math/: Vector2.h  Vector2Int.h  Vector2Short.h  Vector2UInt.h  Vector2UShort.h  Vector3.h
MyServerFramework_Frame/Frame/Net/: Packet.h
MyServerFramework_Frame/Frame/Param/: ParamSet.cpp  ParamSet.h
MyServerFramework_Frame/Frame/STL/: Array.h  ArrayList.h  HashMap.h  Map.h  MyString.h  Queue.h  SafeHashMap.h  SafeHashMapScope.h  SafeMap.h  SafeSet.h  SafeSetScope.h  SafeVector.h  SafeVectorScope.h  Set.h  Vector.h
MyServerFramework_Frame/Frame/Serialize/: SerializerBitRead.cpp  SerializerBitRead.h  SerializerBitWrite.cpp  SerializerBitWrite.h  SerializerRead.cpp  SerializerRead.h  SerializerWrite.cpp  SerializerWrite.h
MyServerFramework_Frame/Frame/ServerFramework/: FrameComponent.h  ServerFramework.cpp  ServerFramework.h
MyServerFramework_Frame/Frame/StateManager/: FrameStateManager.cpp
MyServerFramework_Frame/Frame/Thread/: CustomThread.cpp  ThreadManager.cpp
MyServerFramework_Frame/Frame/Ticker/: Ticker.cpp  Ticker.h  TickerSystem.cpp  TickerSystem.h
MyServerFramework_Frame/Frame/TimePointSystem/: TimePointSystem.cpp
MyServerFramework_Frame/Frame/TimeTaskSystem/: TimeTask.cpp  TimeTask.h  TimeTaskSystem.cpp
MyServerFramework_Frame/Frame/Utility/: BinaryUtility.cpp  BinaryUtility.h  CmdUtility.h  FileUtility.cpp  FileUtility.h  FrameMySQLUtility.cpp  FrameMySQLUtility.h  FrameUtility.cpp  FrameUtility.h  MathUtility.cpp  MathUtility.h  StringUtility.cpp  StringUtility.h  SystemUtility.cpp  SystemUtility.h
(+74 files in other folders)
